# ivan-f

./: .clang-format  .gitignore  CMakeLists.txt  Common.props  Ivan.sln  Main.dsp  Main.sln  README.md  TODO.txt
FeLib/: FeLib.vcxproj  FeLib.vcxproj.filters  packages.config
FeLib/Include/: bitmap.h  config.h  error.h  fearray.h  feio.h  felibdef.h  felist.h  feloops.h  femath.h  festring.h  graphics.h  hscore.h  pragmas.h  rawbit.h  save.h  typedef.h  v2.h  whandler.h
FeLib/Source/: bitmap.cpp  config.cpp  error.cpp  feio.cpp  felist.cpp  femain.cpp  femath.cpp  festring.cpp  graphics.cpp  hscore.cpp  rawbit.cpp  save.cpp  whandler.cpp
FeLib/UnitTests/: FeLibTests.vcxproj  FeLibTests.vcxproj.filters  mathTest.cpp  rectTest.cpp  stdafx.cpp  v2Tests.cpp
Main/: Ivan.aps  Main.sln  Main.vcxproj  Main.vcxproj.filters  ivan.cfg  resource.h
Main/FeLib/: FeLib.vcxproj
Main/Include/: action.h  actions.h  area.h  bodypart.h  char.h  command.h  database.h  dungeon.h  entity.h  fluid.h  game.h  gear.h  god.h  gods.h  human.h  iconf.h  id.h  igraph.h  iloops.h  item.h  ivandef.h  level.h  lsquare.h  lterra.h  lterras.h  materia.h  materias.h  message.h  miscitem.h  nonhuman.h  object.h  proto.h  rain.h  room.h  rooms.h  script.h  slot.h  smoke.h  square.h  stack.h  (+9 more)
Main/Source/: action.cpp  actions.cpp  area.cpp  bodypart.cpp  char.cpp  command.cpp  database.cpp  dungeon.cpp  entity.cpp  fluid.cpp  game.cpp  gear.cpp  god.cpp  gods.cpp  human.cpp  iconf.cpp  id.cpp  igraph.cpp  item.cpp  itemset.cpp  level.cpp  lsquare.cpp  lterra.cpp  lterras.cpp  main.cpp  materia.cpp  materias.cpp  message.cpp  miscitem.cpp  nonhuman.cpp  object.cpp  pool.cpp  proto.cpp  rain.cpp  room.cpp  rooms.cpp  script.cpp  slot.cpp  smoke.cpp  square.cpp  (+8 more)
